            when by chance one of the p-values obtained was below the threshold
            used.  (Any such failure should now occur consistently, rather
            than appearing to be due to a non-deterministic bug.)
      \item **8
      \item **9
      \item **10
      \item **11
      \item **12
      \item **13
      \item **14
      \item **15
      \item **16
      \item **17
      \item **18
      \item **19
      \item **20
      \item **21
      \item **22
      \item Extending lists and character vectors by assigning to an
            index past the end, deleting list items by assigning NULL,
            and concatenation of character vectors with "c" have all
            been speeded up by factors of up to two or three.
      \item **24
      \item **25
      \item **26
      \item **27
      \item **28
      \item **29
      \item **30
      \item Existing code for handling special cases of "[" in which there is
            only one scalar index was replaced by cleaner code that handles 
            more cases.   The old code handled only integer and real vectors, 
            and only positive indexes.  The new code handles all atomic 
            vectors (logical, integer, real, complex, raw, and string), and 
            positive or negative indexes that are not out of bounds.
      \item Extraction of subsets of vectors or matrices (eg, v[10:20]
            or M[1:10,101:110]) has been sped up substantially.
      \item **33
      \item **34
      \item **35
      \item **36
      \item **37
      \item **38
      \item **39
      \item **40
      \item **41
      \item **42
      \item **43
      \item **44
      \item **45
      \item **46
      \item **47
      \item **48
      \item **49
      \item **50
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item Some speedup has been obtained by using new internal C functions 
            for performing exact or partial string matches in the interpreter.
      \item **2